<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.devdivision.iotsleeptracking.ui.alarm.AlarmFragment"
        android:label="@string/menu_alarm"
        tools:layout="@layout/fragment_alarm" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.devdivision.iotsleeptracking.ui.bedroom.BedroomFragment"
        android:label="@string/menu_bedroom"
        tools:layout="@layout/fragment_bedroom" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.devdivision.iotsleeptracking.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.devdivision.iotsleeptracking.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.devdivision.iotsleeptracking.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.devdivision.iotsleeptracking.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>